# qmt_bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
qmt/: __init__.py  cli.py  client.py  patch.py  server.py
qmt/xtquant/: __init__.py  xtconstant.py  xtdata.py  xttrader.py  xttype.py
tests/: test_patch.py  test_xtdata.py  test_xttrader.py
