[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmt-bridge"
version = "0.1.0"
description = "跨平台 QMT（迅投量化交易终端）远程调用桥梁"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "QMT Bridge Contributors"}
]
keywords = ["qmt", "xtquant", "quant", "trading", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=1.3.0",
]

[project.scripts]
qmt-server = "qmt.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["qmt", "qmt.*"]

[tool.setuptools.package-data]
"qmt" = ["*.pyi", "xtquant/**/*.pyi"]
